# curso-yuneta

./: .gitignore  CMakeLists.txt  README.rst
01-print-hello-world/: CMakeLists.txt
01-print-hello-world/c/: CHANGES.rst  CMakeLists.txt
01-print-hello-world/c/docs/: Task_01.mkv  install.rst  task.rst
01-print-hello-world/c/src/: CMakeLists.txt  hello_world.c  hello_world_01.c
01-print-hello-world/docs/: install.rst
01-print-hello-world/src/: hello_world.c
02-print-hello-world-loop/: .gitignore  CMakeLists.txt
02-print-hello-world-loop/c/: CMakeLists.txt
02-print-hello-world-loop/c/docs/: install.rst  task.rst
02-print-hello-world-loop/c/src/: hello_world_loop.c  hello_world_loop_02.c  hello_world_loop_old.c
02-print-hello-world-loop/docs/: install.rst
02-print-hello-world-loop/javascript/src/: hello_world_loop_02.js  package-lock.json
02-print-hello-world-loop/js/: package-lock.json  package.json
02-print-hello-world-loop/js/docs/: install.rst
02-print-hello-world-loop/py/: hello_world_loop_02.py  setup.py
02-print-hello-world-loop/py/docs/: README.rst
02-print-hello-world-loop/python/docs/: install.rst
02-print-hello-world-loop/python/src/: hello_world_loop_02.py
02-print-hello-world-loop/src/: hello_world_loop.c
03-print-hello-name-loop/c/: CMakeLists.txt
03-print-hello-name-loop/c/docs/: install.rst
03-print-hello-name-loop/c/src/: hello_name_loop_03.c  hello_name_loop_03_old.c
04-tcpuv/c/: CMakeLists.txt
04-tcpuv/c/src/: listenconnect.c
04-tcpuv/py/: listenconnect.py  listenconnect_2.py  setup.py
05-tcpuv/c/: CMakeLists.txt
05-tcpuv/c/src/: fichero.txt  listenconnect.c  listenconnect_02.c
05-tcpuv/py/: listenconnect.py  listenconnect_old.py
06-tcpuv-list_files/c/: CHANGES.rst  CMakeLists.txt
06-tcpuv-list_files/c/src/: listenconnect.c
06-tcpuv-list_files/py/: fichero.txt  file2.txt  file3.txt  listenconnect.py  prueba.txt  setup.py
runfile/: hello_world01  hello_world02
